--- a/DeployModel/code/visualize/css/index.css
+++ b/DeployModel/code/visualize/css/index.css
@@ -1,4 +1,20 @@
-.graph{
-	width: 100vw;
-	height: 100vh;
+.graph {
+  width: 100vw;
+  height: 100vh;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.fa-spinner {
+  animation: rotate 2.5s linear infinite;
+  font-size: 50vmin;
+  transform: translateY(-50%);
+  color: coral;
 }
