--- a/DeployModel/code/web/views/index.ejs
+++ b/DeployModel/code/web/views/index.ejs
@@ -167,6 +167,9 @@
         </div> -->
         <div class="text-center">
           <button class="btn btn-dark" id="cal-path">Calculate Path</button>
+          <a href="/napa" class="btn btn-outline-dark" id="cal-path"
+            >Show Flow</a
+          >
         </div>
       </div>
       <hr />
