--- a/DeployModel/code/web/views/realtime.ejs
+++ b/DeployModel/code/web/views/realtime.ejs
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>realtime topo</title>
-    </head>
-    <body>
-        <div id="realtimeGraph"></div>
-    </body>
-    <script
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>realtime topo</title>
+    <style>
+      .loding {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        font-size: 60vmin;
+        transform: translate(-50%, -50%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="loding"><i class="fas fa-spinner fa-spin"></i></div>
+    <div id="realtimeGraph"></div>
+  </body>
+
+  <script
+    src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
+    data-auto-replace-svg="nest"
+  ></script>
+  <script
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/realtime.js"></script>
-    
+    crossorigin="anonymous"
+  ></script>
+  <script type="text/javascript" src="js/realtime.js"></script>
 </html>
