--- a/DeployModel/code/web/views/index.ejs
+++ b/DeployModel/code/web/views/index.ejs
@@ -167,7 +167,7 @@
         </div> -->
         <div class="text-center">
           <button class="btn btn-dark" id="cal-path">Calculate Path</button>
-          <a href="/napa" class="btn btn-outline-dark" id="cal-path"
+          <a href="/flow" class="btn btn-outline-dark" id="cal-path"
             >Show Flow</a
           >
         </div>
