--- a/DeployModel/code/web/views/index.ejs
+++ b/DeployModel/code/web/views/index.ejs
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-      <a class="navbar-brand text-light" href="#">Deploy Model</a>
+      <a class="navbar-brand text-light" href="/">Deploy Model</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -24,22 +24,12 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link text-light" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-        </ul>
-      </div>
     </nav>
     <div class="container">
       <div style="margin: 20px">
         <div class="form-group row">
           <label for="iter-times" class="col-sm-2 col-form-label"
-            >Iter Times</label
+            >Iteration</label
           >
           <div class="col-sm-10">
             <input
@@ -53,7 +43,7 @@
         </div>
         <div class="form-group row">
           <label for="start-node" class="col-sm-2 col-form-label"
-            >Start Node ID</label
+            >Origin Node</label
           >
           <div class="col-sm-10">
             <input
@@ -67,7 +57,7 @@
         </div>
         <div class="form-group row">
           <label for="dest-node" class="col-sm-2 col-form-label"
-            >Dest Node ID</label
+            >Destination Node</label
           >
           <div class="col-sm-10">
             <input
@@ -81,7 +71,9 @@
         </div>
 
         <div class="form-group row">
-          <label for="int-N" class="col-sm-2 col-form-label">User Count</label>
+          <label for="int-N" class="col-sm-2 col-form-label"
+            >Number of Users</label
+          >
           <div class="col-sm-10">
             <input
               type="number"
@@ -93,7 +85,7 @@
           </div>
         </div>
         <div class="form-group row N-ints-block">
-          <label class="col-sm-2 col-form-label">Traffic</label>
+          <label class="col-sm-2 col-form-label">Traffic Levels</label>
           <div class="col-sm-10">
             <div class="row">
               <div class="col-sm">
@@ -107,7 +99,7 @@
           </div>
         </div>
         <div class="form-group row N-ints-block">
-          <label class="col-sm-2 col-form-label">Path Count</label>
+          <label class="col-sm-2 col-form-label">Number of Path</label>
           <div class="col-sm-10">
             <div class="row">
               <div class="col-sm">
@@ -122,49 +114,36 @@
         </div>
 
         <div class="form-group row">
-          <label for="NodeR" class="col-sm-2 col-form-label">NodeR</label>
+          <label for="NodeR" class="col-sm-2 col-form-label">Node Type R</label>
           <div class="col-sm-10">
             <input type="number" min="0" class="form-control" id="NodeR" />
           </div>
         </div>
         <div class="form-group row">
-          <label for="NodeO" class="col-sm-2 col-form-label">NodeO</label>
+          <label for="NodeO" class="col-sm-2 col-form-label">Node Type O</label>
           <div class="col-sm-10">
             <input type="number" min="0" class="form-control" id="NodeO" />
           </div>
         </div>
         <div class="form-group row">
-          <label for="NodeP" class="col-sm-2 col-form-label">NodeP</label>
+          <label for="NodeP" class="col-sm-2 col-form-label">Node Type P</label>
           <div class="col-sm-10">
             <input type="number" min="0" class="form-control" id="NodeP" />
           </div>
         </div>
         <div class="form-group row">
-          <label for="NodeQ" class="col-sm-2 col-form-label">NodeQ</label>
+          <label for="NodeQ" class="col-sm-2 col-form-label">Node Type Q</label>
           <div class="col-sm-10">
             <input type="number" min="0" class="form-control" id="NodeQ" />
           </div>
         </div>
         <div class="form-group row">
-          <label for="NodeS" class="col-sm-2 col-form-label">NodeS</label>
+          <label for="NodeS" class="col-sm-2 col-form-label">Node Type S</label>
           <div class="col-sm-10">
             <input type="number" min="0" class="form-control" id="NodeS" />
           </div>
         </div>
 
-        <!-- <div class="form-group row">
-          <label for="config-loc" class="col-sm-2 col-form-label"
-            >Config Location</label
-          >
-          <div class="col-sm-10">
-            <input
-              type="text"
-              class="form-control"
-              id="config-loc"
-              placeholder="./config.txt"
-            />
-          </div>
-        </div> -->
         <div class="text-center">
           <button class="btn btn-dark" id="cal-path">Calculate Path</button>
           <a href="/flow" class="btn btn-outline-dark" id="cal-path"
@@ -173,10 +152,6 @@
         </div>
       </div>
       <hr />
-      <!-- <div class="d-flex justify-content-center">
-        <button class="btn btn-dark mr-2" id="show-method">Show Graph</button>
-        <button class="btn btn-dark" id="close-method">Close Graph</button>
-			</div> -->
 
       <div id="total-graph" class="mt-3 text-center"></div>
 
@@ -206,5 +181,4 @@
     crossorigin="anonymous"
   ></script>
   <script type="text/javascript" src="js/main.js"></script>
-  <!-- <script type="text/javascript" src="js/canvas.js"></script> -->
 </html>
