--- a/DeployModel/code/web/views/newentry.ejs
+++ b/DeployModel/code/web/views/newentry.ejs
@@ -49,6 +49,75 @@
         </div>
       </div>
 
+      <div class="form-group row">
+        <label for="in_port" class="col-sm-2 col-form-label">in_port</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="in_port" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="eth_src" class="col-sm-2 col-form-label">eth_src</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="eth_src" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="eth_dst" class="col-sm-2 col-form-label">eth_dst</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="eth_dst" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="eth_type" class="col-sm-2 col-form-label">eth_type</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="eth_type" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="ip_dscp" class="col-sm-2 col-form-label">ip_dscp</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="ip_dscp" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="ip_ecn" class="col-sm-2 col-form-label">ip_ecn</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="ip_ecn" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="ip_proto" class="col-sm-2 col-form-label">ip_proto</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="ip_proto" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="ipv4_src" class="col-sm-2 col-form-label">ipv4_src</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="ipv4_src" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="ipv4_dst" class="col-sm-2 col-form-label">ipv4_dst</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="ipv4_dst" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="OUTPUT" class="col-sm-2 col-form-label">OUTPUT</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="OUTPUT" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="GOTO_TABLE" class="col-sm-2 col-form-label"
+          >GOTO_TABLE</label
+        >
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="GOTO_TABLE" />
+        </div>
+      </div>
+
       <div class="text-center">
         <button class="btn btn-dark" id="cal-path">Create Entry</button>
       </div>
@@ -71,4 +140,5 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"
   ></script>
+  <script src="js/newentry.js"></script>
 </html>
