--- a/DeployModel/code/web/views/newentry.ejs
+++ b/DeployModel/code/web/views/newentry.ejs
@@ -9,8 +9,22 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <style>
+      .loading {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        font-size: 60vmin;
+        transform: translate(-50%, -50%);
+        z-index: 10;
+      }
+    </style>
   </head>
   <body>
+    <div class="loading" style="display: none">
+      <i class="fas fa-spinner fa-spin"></i>
+    </div>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
       <a class="navbar-brand text-light" href="/">Deploy Model</a>
       <button
@@ -26,6 +40,18 @@
       </button>
     </nav>
     <div class="container">
+      <div
+        class="alert alert-success my-3"
+        role="alert"
+        style="display: none"
+      ></div>
+
+      <div
+        class="alert alert-danger my-3"
+        role="alert"
+        style="display: none"
+      ></div>
+
       <div class="text-center my-3">
         <h1>New Entry</h1>
       </div>
@@ -119,7 +145,7 @@
       </div>
 
       <div class="text-center">
-        <button class="btn btn-dark" id="cal-path">Create Entry</button>
+        <button class="btn btn-dark" id="submit">Create Entry</button>
       </div>
     </div>
   </body>
