add new entry link

--- a/DeployModel/code/web/views/index.ejs
+++ b/DeployModel/code/web/views/index.ejs
@@ -13,6 +13,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
       <a class="navbar-brand text-light" href="/">Deploy Model</a>
+      <a class="navbar-link text-light" href="/newentry">New Entry</a>
       <button
         class="navbar-toggler"
         type="button"
