--- a/DeployModel/code/web/views/newentry.ejs
+++ b/DeployModel/code/web/views/newentry.ejs
@@ -27,6 +27,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
       <a class="navbar-brand text-light" href="/">Deploy Model</a>
+      <a class="navbar-link text-light" href="/newentry">New Entry</a>
       <button
         class="navbar-toggler"
         type="button"
