--- a/DeployModel/code/web/views/index.ejs
+++ b/DeployModel/code/web/views/index.ejs
@@ -12,8 +12,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-      <a class="navbar-brand text-light" href="/">Deploy Model</a>
-      <a class="navbar-link text-light" href="/newentry">New Entry</a>
+      <a class="navbar-brand text-light" href="#">Deploy Model</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -25,7 +24,17 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="navbar-link text-light" href="/flowtable">Flow Table</a>
+            <a class="navbar-link text-light" href="/newentry">New Entry</a>
+          </li>
+        </ul>
+      </div>
     </nav>
+
     <div class="container">
       <div style="margin: 20px">
         <div class="form-group row">
