--- a/DeployModel/code/web/views/newentry.ejs
+++ b/DeployModel/code/web/views/newentry.ejs
@@ -26,8 +26,7 @@
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
-      <a class="navbar-brand text-light" href="/">Deploy Model</a>
-      <a class="navbar-link text-light" href="/newentry">New Entry</a>
+      <a class="navbar-brand text-light" href="#">Deploy Model</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -39,7 +38,17 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="navbar-link text-light" href="/flowtable">Flow Table</a>
+            <a class="navbar-link text-light" href="/newentry">New Entry</a>
+          </li>
+        </ul>
+      </div>
     </nav>
+
     <div class="container">
       <div
         class="alert alert-success my-3"
