add delete button

--- a/DeployModel/code/web/views/table.ejs
+++ b/DeployModel/code/web/views/table.ejs
@@ -80,6 +80,7 @@
                 <th>Hard Timeout</th>
                 <th>Idle Timeout</th>
                 <th>Cookie</th>
+                <th>DELETE</th>
                 <!-- <th>Byte Count</th>
                                 <th>Package Count</th> -->
               </tr>
@@ -98,6 +99,7 @@
                 <th>Type</th>
                 <th>Buckets</th>
                 <th>狀態</th>
+                <th>DELETE</th>
               </tr>
             </thead>
             <tbody id="groupEntryBody"></tbody>
