--- a/DeployModel/code/web/views/table.ejs
+++ b/DeployModel/code/web/views/table.ejs
@@ -68,8 +68,11 @@
       </div>
       <div class="row mt-3">
         <div class="collapse" id="flow-entry-container">
-          <table class="table table-striped table-hover" id="flow-entry">
-            <thead class="thead-dark">
+          <table
+            class="table table-striped table-hover text-center"
+            id="flow-entry"
+          >
+            <thead class="thead-dark text-center">
               <tr>
                 <th>Switch Name</th>
                 <th>Table ID</th>
@@ -91,8 +94,11 @@
       </div>
       <div class="row mt-3">
         <div class="collapse" id="group-entry-container">
-          <table class="table table-striped table-hover" id="group-entry">
-            <thead class="thead-dark">
+          <table
+            class="table table-striped table-hover text-center"
+            id="group-entry"
+          >
+            <thead class="thead-dark text-center">
               <tr>
                 <th>Switch ID</th>
                 <th>Group ID</th>
