--- a/DeployModel/code/web/views/table.ejs
+++ b/DeployModel/code/web/views/table.ejs
@@ -29,9 +29,16 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item mx-1 active">
             <a class="navbar-link text-light" href="/flowtable">Flow Table</a>
+          </li>
+          <li class="nav-item mx-1">
             <a class="navbar-link text-light" href="/newentry">New Entry</a>
+          </li>
+          <li class="nav-item mx-1">
+            <a class="navbar-link text-light" href="/newgroupentry"
+              >New Group Entry</a
+            >
           </li>
         </ul>
       </div>
