--- a/DeployModel/web/views/index.ejs
+++ b/DeployModel/web/views/index.ejs
@@ -132,6 +132,7 @@
 
         <div class="text-center">
           <button class="btn btn-dark" id="cal-path">Calculate Path</button>
+          <button class="btn btn-outline-dark" id="fetch-path">Fetch Path</button>
           <a href="/flow" class="btn btn-outline-dark" id="cal-path">Show Flow</a>
         </div>
       </div>
